--- a/Lab5/Resolved rate control of the end effector.ipynb
+++ b/Lab5/Resolved rate control of the end effector.ipynb
@@ -239,6 +239,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def compute_trajectory(position_init, position_goal, t_init, t_goal, t):\n",
+    "    p_dif, t_dif = position_goal - position_init, t - t_init\n",
+    "    T = t_goal - t_init\n",
+    "    a3, a4, a5 = 10/T**3, -15/T**4, 6/T**5\n",
+    "    desired_position = position_init + (a3*t_dif**3+a4*t_dif**4+a5*t_dif**5)*(p_dif)\n",
+    "    desired_velocity = (3*a3*t_dif**2+4*a4*t_dif**3+5*a5*t_dif**4)*(p_dif)\n",
+    "    \n",
+    "    # we return the answer\n",
+    "    return desired_position, desired_velocity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def compute_jacobian(theta):\n",
     "    J = np.zeros([6,3])\n",
     "\n",
@@ -252,10 +269,11 @@
     "    J[:, 1] = adjoint(T_SH2) @ np.array([0,0,1,0,0,0])\n",
     "    J[:, 2] = adjoint(T_SK) @ np.array([0,0,1,0,0,0])\n",
     "    \n",
-    "    T_OF = np.eye(4)\n",
-    "    T_OF[:3, :3] = T_SF[:3, :3]\n",
+    "    T_OS = T_SF\n",
+    "    T_OS[:3,:3] = np.eye(3)\n",
+    "    T_OS[:3, 3] *= -1\n",
     "    \n",
-    "    J_O = adjoint(T_OF) @ J\n",
+    "    J_O = adjoint(T_OS) @ J\n",
     "    return J_O"
    ]
   },
@@ -312,25 +330,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if use_real_robot:\n",
+    "#     # Triggers the real robot\n",
+    "#     # Don't forget to turn on the robot first !!!\n",
+    "#     robot = NYUFingerReal()\n",
+    "#     # Make sure that the motor number matches that on the robot\n",
+    "#     motor_number = np.array([1,2,3])\n",
+    "#     robot.initialize('ens1', motor_number)\n",
+    "# else:\n",
+    "#     # we can now create a robot simulation\n",
+    "#     robot = NYUFingerSimulator()\n",
+    "\n",
+    "# # we reset the simulation\n",
+    "# if not use_real_robot:\n",
+    "#     robot.reset_state([0,0,0])\n",
+    "\n",
+    "    \n",
+    "# # we simulate for 15 seconds (5 seconds per goal)\n",
+    "# run_time = 15.\n",
+    "# dt = 0.001\n",
+    "# num_steps = int(run_time/dt)\n",
+    "\n",
+    "# # the PD gains\n",
+    "# P = np.array([1.5, 1.5, 1.5])\n",
+    "# D = np.array([0.01, 0.01, 0.01])\n",
+    "\n",
+    "# ## we allocate a few vectors to collect data while we do the simulation\n",
+    "# # we will store the sensor values (angular position and velocities)\n",
+    "# measured_positions = np.zeros([num_steps,3])\n",
+    "# measured_velocities = np.zeros_like(measured_positions)\n",
+    "# # we will store the commands sent to the robot\n",
+    "# desired_torques = np.zeros_like(measured_positions)\n",
+    "# # we will store the desired joint trajectories that the PD controller follows\n",
+    "# desired_positions = np.zeros_like(measured_positions)\n",
+    "# desired_velocities = np.zeros_like(measured_positions)\n",
+    "# # we keep track of time\n",
+    "# time = np.zeros([num_steps])\n",
+    "# # we will store the end effector position (desired and measured)\n",
+    "# measured_finger_position = np.zeros([num_steps,3])\n",
+    "# desired_finger_position = np.zeros([num_steps,3])\n",
+    "\n",
+    "# # here we create a list of ball positions and display them\n",
+    "# ball_positions = [np.array([0.597,-0.056]), np.array([0.521,0.12]), np.array([0.3,-0.225])]\n",
+    "# if not use_real_robot:\n",
+    "#     for ball in ball_positions:\n",
+    "#         robot.add_ball(ball[0], ball[1])\n",
+    "# else:\n",
+    "#     # we wait\n",
+    "#     for i in range(7500):\n",
+    "#         robot.send_joint_torque(np.zeros([3,1]))\n",
+    "#         robot.step()\n",
+    "\n",
+    "# # the time to reach a goal\n",
+    "# time_to_goal = 5.0\n",
+    "\n",
+    "# # we use this to know which target we are currently aiming\n",
+    "# ball_number = 0\n",
+    "\n",
+    "# # we measure the internal time for one target movement\n",
+    "# t = 0.\n",
+    "\n",
+    "# for i in range(num_steps):\n",
+    "#     # get the current time and save it\n",
+    "#     time[i] = dt * i\n",
+    "    \n",
+    "#     # we read the position and velocities of the joints from the robot or simulation\n",
+    "#     q, dq = robot.get_state()\n",
+    "    \n",
+    "#     # we store these values for later use\n",
+    "#     measured_positions[i,:] = q\n",
+    "#     measured_velocities[i,:] = dq\n",
+    "    \n",
+    "#     # save the current position of the fingertip using the FK function\n",
+    "#     pose = forward_kinematics(q)\n",
+    "#     measured_finger_position[i,:] = pose[0:3,3]\n",
+    "\n",
+    "#     # compute jacobian\n",
+    "#     jacobianVel = compute_jacobian(q)[3:] @ dq\n",
+    "#     recordedVel = (measured_finger_position[i,:] - measured_finger_position[i-1,:]) / dt\n",
+    "#     velDif = jacobianVel-recordedVel\n",
+    "#     if not (i % 1000):\n",
+    "#         print(velDif)\n",
+    "    \n",
+    "#     # controller: TODO HERE IMPLEMENT YOUR CONTROLLER TO REACH ALL 3 TARGETS\n",
+    "#     # the goal here is to compute q_des and dq_des that the PD controller will follow\n",
+    "#     # you will need some internal logic to decide which ball you are currently targetting, etc.\n",
+    "#     if i == 0:\n",
+    "#         init_pos = forward_kinematics(q)[:3,3]\n",
+    "#         des_pos = (np.hstack((ball_positions[ball_number],np.array([0]))))\n",
+    "    \n",
+    "#     if time_to_goal - t <= 0:\n",
+    "#         init_pos = (np.hstack((ball_positions[ball_number],np.array([0]))))\n",
+    "        \n",
+    "#         ball_number = (ball_number + 1) % 3\n",
+    "        \n",
+    "#         des_pos = (np.hstack((ball_positions[ball_number],np.array([0]))))\n",
+    "#         t = 0\n",
+    "    \n",
+    "#     goal_pos = des_pos\n",
+    "    \n",
+    "#     # change this according to your needs so the robot moves according to your goals\n",
+    "        \n",
+    "#     q_des, dq_des = compute_trajectory(init_pos, goal_pos, 0, time_to_goal, t)\n",
+    "    \n",
+    "    \n",
+    "#     t += dt\n",
+    "\n",
+    "#     # change this according to your needs so the robot moves according to your goals\n",
+    "# #     q_des = np.array([0, 0, 0])\n",
+    "# #     dq_des = np.array([0, 0, 0])\n",
+    "    \n",
+    "    \n",
+    "#     # we save the desired positions/velocities for later plotting \n",
+    "#     desired_positions[i,:] = q_des\n",
+    "#     desired_velocities[i,:] = dq_des\n",
+    "    \n",
+    "#     ##PD controller\n",
+    "#     q_des_joint = inverse_kinematics(q_des[0], q_des[1])\n",
+    "#     error = q_des - q # the position error for all the joints (it's a 3D vector)\n",
+    "#     d_error = dq_des-dq # the velocity error for all the joints\n",
+    "    \n",
+    "#     # we compute the desired torques as a PD controller\n",
+    "#     joint_torques = D * d_error\n",
+    "#     desired_torques[i,:] = joint_torques\n",
+    "    \n",
+    "#     # we send them to the robot and do one simulation step\n",
+    "#     robot.send_joint_torque(joint_torques)\n",
+    "#     robot.step()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-300.  320.  -14.]\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'compute_trajectory' is not defined",
+     "ename": "LinAlgError",
+     "evalue": "Singular matrix",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [7]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    102\u001b[0m q_des \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m])\n\u001b[1;32m    103\u001b[0m dq_des \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m--> 105\u001b[0m q_des, dq_des \u001b[38;5;241m=\u001b[39m \u001b[43mcompute_trajectory\u001b[49m(init_pos, goal_pos, \u001b[38;5;241m0\u001b[39m, time_to_goal, t)\n\u001b[1;32m    107\u001b[0m q_des, dq_des \u001b[38;5;241m=\u001b[39m q_des\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m3\u001b[39m), dq_des\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m3\u001b[39m)\n\u001b[1;32m    109\u001b[0m t \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m dt\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'compute_trajectory' is not defined"
+      "\u001b[0;31mLinAlgError\u001b[0m                               Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [9]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    103\u001b[0m q_des, dq_des \u001b[38;5;241m=\u001b[39m compute_trajectory(init_pos, goal_pos, \u001b[38;5;241m0\u001b[39m, time_to_goal, t)\n\u001b[1;32m    104\u001b[0m v_O \u001b[38;5;241m=\u001b[39m (dq_des \u001b[38;5;241m+\u001b[39m P \u001b[38;5;241m*\u001b[39m (q_des \u001b[38;5;241m-\u001b[39m pose[:\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m3\u001b[39m]))\n\u001b[0;32m--> 106\u001b[0m dtheta_des \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlinalg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minv\u001b[49m\u001b[43m(\u001b[49m\u001b[43mjacobian\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m*\u001b[39m v_O\n\u001b[1;32m    108\u001b[0m t \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m dt\n\u001b[1;32m    110\u001b[0m \u001b[38;5;66;03m# we save the desired positions/velocities for later plotting \u001b[39;00m\n",
+      "File \u001b[0;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36minv\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "File \u001b[0;32m/usr/local/lib/python3.8/dist-packages/numpy/linalg/linalg.py:545\u001b[0m, in \u001b[0;36minv\u001b[0;34m(a)\u001b[0m\n\u001b[1;32m    543\u001b[0m signature \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mD->D\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m isComplexType(t) \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124md->d\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m    544\u001b[0m extobj \u001b[38;5;241m=\u001b[39m get_linalg_error_extobj(_raise_linalgerror_singular)\n\u001b[0;32m--> 545\u001b[0m ainv \u001b[38;5;241m=\u001b[39m \u001b[43m_umath_linalg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minv\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msignature\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msignature\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mextobj\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mextobj\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    546\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m wrap(ainv\u001b[38;5;241m.\u001b[39mastype(result_t, copy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m))\n",
+      "File \u001b[0;32m/usr/local/lib/python3.8/dist-packages/numpy/linalg/linalg.py:88\u001b[0m, in \u001b[0;36m_raise_linalgerror_singular\u001b[0;34m(err, flag)\u001b[0m\n\u001b[1;32m     87\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_raise_linalgerror_singular\u001b[39m(err, flag):\n\u001b[0;32m---> 88\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m LinAlgError(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSingular matrix\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mLinAlgError\u001b[0m: Singular matrix"
      ]
     }
    ],
@@ -340,8 +489,8 @@
     "    # Don't forget to turn on the robot first !!!\n",
     "    robot = NYUFingerReal()\n",
     "    # Make sure that the motor number matches that on the robot\n",
-    "    motor_number = np.array([1,2,3])\n",
-    "    robot.initialize('ens1', motor_number)\n",
+    "    motor_number = np.array([3,2,0])\n",
+    "    robot.initialize('eth4', motor_number)\n",
     "else:\n",
     "    # we can now create a robot simulation\n",
     "    robot = NYUFingerSimulator()\n",
@@ -409,57 +558,52 @@
     "    # save the current position of the fingertip using the FK function\n",
     "    pose = forward_kinematics(q)\n",
     "    measured_finger_position[i,:] = pose[0:3,3]\n",
-    "\n",
-    "    # compute jacobian\n",
-    "    jacobianVel = compute_jacobian(q)[3:] @ dq\n",
-    "    recordedVel = (measured_finger_position[i,:] - measured_finger_position[i-1,:]) / dt\n",
-    "    velDif = jacobianVel-recordedVel\n",
-    "    if not (i % 1000):\n",
-    "        print(velDif)\n",
     "    \n",
+    "    # compute jacobian\n",
+    "    jacobian = compute_jacobian(q)\n",
+    "    jacobianVel = jacobian[3:] @ dq\n",
+    "    if i>0:\n",
+    "        recordedVel = (measured_finger_position[i,:] - measured_finger_position[i-1,:]) / dt\n",
+    "        velDif = jacobianVel-recordedVel\n",
+    "#     if not (i % 1000):\n",
+    "        print(velDif)\n",
+    "\n",
     "    # controller: TODO HERE IMPLEMENT YOUR CONTROLLER TO REACH ALL 3 TARGETS\n",
     "    # the goal here is to compute q_des and dq_des that the PD controller will follow\n",
     "    # you will need some internal logic to decide which ball you are currently targetting, etc.\n",
     "    if i == 0:\n",
-    "        init_pos = q.reshape((3,1))\n",
-    "        x_des, y_des = ball_positions[ball_number]\n",
+    "        init_pos = pose[:3,3]\n",
+    "        des_pos = np.hstack((ball_positions[ball_number],np.array([0])))\n",
     "    \n",
     "    if time_to_goal - t <= 0:\n",
-    "        x_init, y_init = ball_positions[ball_number]\n",
-    "        init_pos = inverse_kinematics(x_init, y_init)[0]\n",
+    "        init_pos = (np.hstack((ball_positions[ball_number],np.array([0]))))\n",
     "        \n",
     "        ball_number = (ball_number + 1) % 3\n",
     "        \n",
-    "        x_des, y_des = ball_positions[ball_number]\n",
+    "        des_pos = (np.hstack((ball_positions[ball_number],np.array([0]))))\n",
     "        t = 0\n",
     "    \n",
-    "    goal_pos = inverse_kinematics(x_des, y_des)[0]\n",
+    "    goal_pos = des_pos\n",
     "    \n",
     "    # change this according to your needs so the robot moves according to your goals\n",
-    "    q_des = np.array([0, 0, 0])\n",
-    "    dq_des = np.array([0, 0, 0])\n",
-    "        \n",
     "    q_des, dq_des = compute_trajectory(init_pos, goal_pos, 0, time_to_goal, t)\n",
+    "    v_O = (dq_des + P * (q_des - pose[:3,3]))\n",
     "    \n",
-    "    q_des, dq_des = q_des.reshape(3), dq_des.reshape(3)\n",
-    "    \n",
+    "    # TODO handle singular (when q[1] < 0.05)\n",
+    "    dtheta_des = np.linalg.inv(jacobian[:3]) * v_O\n",
+    "        \n",
     "    t += dt\n",
-    "\n",
-    "    # change this according to your needs so the robot moves according to your goals\n",
-    "    q_des = np.array([0, 0, 0])\n",
-    "    dq_des = np.array([0, 0, 0])\n",
-    "    \n",
     "    \n",
     "    # we save the desired positions/velocities for later plotting \n",
     "    desired_positions[i,:] = q_des\n",
     "    desired_velocities[i,:] = dq_des\n",
     "    \n",
     "    ##PD controller\n",
-    "    error = q_des - q # the position error for all the joints (it's a 3D vector)\n",
-    "    d_error = dq_des-dq # the velocity error for all the joints\n",
+    "#     error = q_des - q # the position error for all the joints (it's a 3D vector)\n",
+    "    d_error = dtheta_des - dq # the velocity error for all the joints\n",
     "    \n",
     "    # we compute the desired torques as a PD controller\n",
-    "    joint_torques = P * error + D * d_error\n",
+    "    joint_torques = D * d_error\n",
     "    desired_torques[i,:] = joint_torques\n",
     "    \n",
     "    # we send them to the robot and do one simulation step\n",
