--- a/Lab5/Resolved Rate Control of the End Effector -- Gayatri and El-Copy1.ipynb
+++ b/Lab5/Resolved Rate Control of the End Effector -- Gayatri and El-Copy1.ipynb
@@ -367,600 +367,27 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "movement_type = \"balls\"\n",
+    "# movement_type = \"circle\"\n",
+    "# movement_type = \"figure 8\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0\n",
-      "0.001\n",
-      "0.002\n",
-      "0.003\n",
-      "0.004\n",
-      "0.005\n",
-      "0.006\n",
-      "0.007\n",
-      "0.008\n",
-      "0.009000000000000001\n",
-      "0.01\n",
-      "0.011\n",
-      "0.012\n",
-      "0.013000000000000001\n",
-      "0.014\n",
-      "0.015\n",
-      "0.016\n",
-      "0.017\n",
-      "0.018000000000000002\n",
-      "0.019\n",
-      "0.02\n",
-      "0.021\n",
-      "0.022\n",
-      "0.023\n",
-      "0.024\n",
-      "0.025\n",
-      "0.026000000000000002\n",
-      "0.027\n",
-      "0.028\n",
-      "0.029\n",
-      "0.03\n",
-      "0.031\n",
-      "0.032\n",
-      "0.033\n",
-      "0.034\n",
-      "0.035\n",
-      "0.036000000000000004\n",
-      "0.037\n",
-      "0.038\n",
-      "0.039\n",
-      "0.04\n",
-      "0.041\n",
-      "0.042\n",
-      "0.043000000000000003\n",
-      "0.044\n",
-      "0.045\n",
-      "0.046\n",
-      "0.047\n",
-      "0.048\n",
-      "0.049\n",
-      "0.05\n",
-      "0.051000000000000004\n",
-      "0.052000000000000005\n",
-      "0.053\n",
-      "0.054\n",
-      "0.055\n",
-      "0.056\n",
-      "0.057\n",
-      "0.058\n",
-      "0.059000000000000004\n",
-      "0.06\n",
-      "0.061\n",
-      "0.062\n",
-      "0.063\n",
-      "0.064\n",
-      "0.065\n",
-      "0.066\n",
-      "0.067\n",
-      "0.068\n",
-      "0.069\n",
-      "0.07\n",
-      "0.07100000000000001\n",
-      "0.07200000000000001\n",
-      "0.073\n",
-      "0.074\n",
-      "0.075\n",
-      "0.076\n",
-      "0.077\n",
-      "0.078\n",
-      "0.079\n",
-      "0.08\n",
-      "0.081\n",
-      "0.082\n",
-      "0.083\n",
-      "0.084\n",
-      "0.085\n",
-      "0.08600000000000001\n",
-      "0.08700000000000001\n",
-      "0.088\n",
-      "0.089\n",
-      "0.09\n",
-      "0.091\n",
-      "0.092\n",
-      "0.093\n",
-      "0.094\n",
-      "0.095\n",
-      "0.096\n",
-      "0.097\n",
-      "0.098\n",
-      "0.099\n",
-      "0.1\n",
-      "0.101\n",
-      "0.10200000000000001\n",
-      "0.10300000000000001\n",
-      "0.10400000000000001\n",
-      "0.105\n",
-      "0.106\n",
-      "0.107\n",
-      "0.108\n",
-      "0.109\n",
-      "0.11\n",
-      "0.111\n",
-      "0.112\n",
-      "0.113\n",
-      "0.114\n",
-      "0.115\n",
-      "0.116\n",
-      "0.117\n",
-      "0.11800000000000001\n",
-      "0.11900000000000001\n",
-      "0.12\n",
-      "0.121\n",
-      "0.122\n",
-      "0.123\n",
-      "0.124\n",
-      "0.125\n",
-      "0.126\n",
-      "0.127\n",
-      "0.128\n",
-      "0.129\n",
-      "0.13\n",
-      "0.131\n",
-      "0.132\n",
-      "0.133\n",
-      "0.134\n",
-      "0.135\n",
-      "0.136\n",
-      "0.137\n",
-      "0.138\n",
-      "0.139\n",
-      "0.14\n",
-      "0.14100000000000001\n",
-      "0.14200000000000002\n",
-      "0.14300000000000002\n",
-      "0.14400000000000002\n",
-      "0.145\n",
-      "0.146\n",
-      "0.147\n",
-      "0.148\n",
-      "0.149\n",
-      "0.15\n",
-      "0.151\n",
-      "0.152\n",
-      "0.153\n",
-      "0.154\n",
-      "0.155\n",
-      "0.156\n",
-      "0.157\n",
-      "0.158\n",
-      "0.159\n",
-      "0.16\n",
-      "0.161\n",
-      "0.162\n",
-      "0.163\n",
-      "0.164\n",
-      "0.165\n",
-      "0.166\n",
-      "0.167\n",
-      "0.168\n",
-      "0.169\n",
-      "0.17\n",
-      "0.171\n",
-      "0.17200000000000001\n",
-      "0.17300000000000001\n",
-      "0.17400000000000002\n",
-      "0.17500000000000002\n",
-      "0.176\n",
-      "0.177\n",
-      "0.178\n",
-      "0.179\n",
-      "0.18\n",
-      "0.181\n",
-      "0.182\n",
-      "0.183\n",
-      "0.184\n",
-      "0.185\n",
-      "0.186\n",
-      "0.187\n",
-      "0.188\n",
-      "0.189\n",
-      "0.19\n",
-      "0.191\n",
-      "0.192\n",
-      "0.193\n",
-      "0.194\n",
-      "0.195\n",
-      "0.196\n",
-      "0.197\n",
-      "0.198\n",
-      "0.199\n",
-      "0.2\n",
-      "0.201\n",
-      "0.202\n",
-      "0.203\n",
-      "0.20400000000000001\n",
-      "0.20500000000000002\n",
-      "0.20600000000000002\n",
-      "0.20700000000000002\n",
-      "0.20800000000000002\n",
-      "0.209\n",
-      "0.21\n",
-      "0.211\n",
-      "0.212\n",
-      "0.213\n",
-      "0.214\n",
-      "0.215\n",
-      "0.216\n",
-      "0.217\n",
-      "0.218\n",
-      "0.219\n",
-      "0.22\n",
-      "0.221\n",
-      "0.222\n",
-      "0.223\n",
-      "0.224\n",
-      "0.225\n",
-      "0.226\n",
-      "0.227\n",
-      "0.228\n",
-      "0.229\n",
-      "0.23\n",
-      "0.231\n",
-      "0.232\n",
-      "0.233\n",
-      "0.234\n",
-      "0.23500000000000001\n",
-      "0.23600000000000002\n",
-      "0.23700000000000002\n",
-      "0.23800000000000002\n",
-      "0.23900000000000002\n",
-      "0.24\n",
-      "0.241\n",
-      "0.242\n",
-      "0.243\n",
-      "0.244\n",
-      "0.245\n",
-      "0.246\n",
-      "0.247\n",
-      "0.248\n",
-      "0.249\n",
-      "0.25\n",
-      "0.251\n",
-      "0.252\n",
-      "0.253\n",
-      "0.254\n",
-      "0.255\n",
-      "0.256\n",
-      "0.257\n",
-      "0.258\n",
-      "0.259\n",
-      "0.26\n",
-      "0.261\n",
-      "0.262\n",
-      "0.263\n",
-      "0.264\n",
-      "0.265\n",
-      "0.266\n",
-      "0.267\n",
-      "0.268\n",
-      "0.269\n",
-      "0.27\n",
-      "0.271\n",
-      "0.272\n",
-      "0.273\n",
-      "0.274\n",
-      "0.275\n",
-      "0.276\n",
-      "0.277\n",
-      "0.278\n",
-      "0.279\n",
-      "0.28\n",
-      "0.281\n",
-      "0.28200000000000003\n",
-      "0.28300000000000003\n",
-      "0.28400000000000003\n",
-      "0.28500000000000003\n",
-      "0.28600000000000003\n",
-      "0.28700000000000003\n",
-      "0.28800000000000003\n",
-      "0.289\n",
-      "0.29\n",
-      "0.291\n",
-      "0.292\n",
-      "0.293\n",
-      "0.294\n",
-      "0.295\n",
-      "0.296\n",
-      "0.297\n",
-      "0.298\n",
-      "0.299\n",
-      "0.3\n",
-      "0.301\n",
-      "0.302\n",
-      "0.303\n",
-      "0.304\n",
-      "0.305\n",
-      "0.306\n",
-      "0.307\n",
-      "0.308\n",
-      "0.309\n",
-      "0.31\n",
-      "0.311\n",
-      "0.312\n",
-      "0.313\n",
-      "0.314\n",
-      "0.315\n",
-      "0.316\n",
-      "0.317\n",
-      "0.318\n",
-      "0.319\n",
-      "0.32\n",
-      "0.321\n",
-      "0.322\n",
-      "0.323\n",
-      "0.324\n",
-      "0.325\n",
-      "0.326\n",
-      "0.327\n",
-      "0.328\n",
-      "0.329\n",
-      "0.33\n",
-      "0.331\n",
-      "0.332\n",
-      "0.333\n",
-      "0.334\n",
-      "0.335\n",
-      "0.336\n",
-      "0.337\n",
-      "0.338\n",
-      "0.339\n",
-      "0.34\n",
-      "0.341\n",
-      "0.342\n",
-      "0.343\n",
-      "0.34400000000000003\n",
-      "0.34500000000000003\n",
-      "0.34600000000000003\n",
-      "0.34700000000000003\n",
-      "0.34800000000000003\n",
-      "0.34900000000000003\n",
-      "0.35000000000000003\n",
-      "0.35100000000000003\n",
-      "0.352\n",
-      "0.353\n",
-      "0.354\n",
-      "0.355\n",
-      "0.356\n",
-      "0.357\n",
-      "0.358\n",
-      "0.359\n",
-      "0.36\n",
-      "0.361\n",
-      "0.362\n",
-      "0.363\n",
-      "0.364\n",
-      "0.365\n",
-      "0.366\n",
-      "0.367\n",
-      "0.368\n",
-      "0.369\n",
-      "0.37\n",
-      "0.371\n",
-      "0.372\n",
-      "0.373\n",
-      "0.374\n",
-      "0.375\n",
-      "0.376\n",
-      "0.377\n",
-      "0.378\n",
-      "0.379\n",
-      "0.38\n",
-      "0.381\n",
-      "0.382\n",
-      "0.383\n",
-      "0.384\n",
-      "0.385\n",
-      "0.386\n",
-      "0.387\n",
-      "0.388\n",
-      "0.389\n",
-      "0.39\n",
-      "0.391\n",
-      "0.392\n",
-      "0.393\n",
-      "0.394\n",
-      "0.395\n",
-      "0.396\n",
-      "0.397\n",
-      "0.398\n",
-      "0.399\n",
-      "0.4\n",
-      "0.401\n",
-      "0.402\n",
-      "0.403\n",
-      "0.404\n",
-      "0.405\n",
-      "0.406\n",
-      "0.40700000000000003\n",
-      "0.40800000000000003\n",
-      "0.40900000000000003\n",
-      "0.41000000000000003\n",
-      "0.41100000000000003\n",
-      "0.41200000000000003\n",
-      "0.41300000000000003\n",
-      "0.41400000000000003\n",
-      "0.41500000000000004\n",
-      "0.41600000000000004\n",
-      "0.417\n",
-      "0.418\n",
-      "0.419\n",
-      "0.42\n",
-      "0.421\n",
-      "0.422\n",
-      "0.423\n",
-      "0.424\n",
-      "0.425\n",
-      "0.426\n",
-      "0.427\n",
-      "0.428\n",
-      "0.429\n",
-      "0.43\n",
-      "0.431\n",
-      "0.432\n",
-      "0.433\n",
-      "0.434\n",
-      "0.435\n",
-      "0.436\n",
-      "0.437\n",
-      "0.438\n",
-      "0.439\n",
-      "0.44\n",
-      "0.441\n",
-      "0.442\n",
-      "0.443\n",
-      "0.444\n",
-      "0.445\n",
-      "0.446\n",
-      "0.447\n",
-      "0.448\n",
-      "0.449\n",
-      "0.45\n",
-      "0.451\n",
-      "0.452\n",
-      "0.453\n",
-      "0.454\n",
-      "0.455\n",
-      "0.456\n",
-      "0.457\n",
-      "0.458\n",
-      "0.459\n",
-      "0.46\n",
-      "0.461\n",
-      "0.462\n",
-      "0.463\n",
-      "0.464\n",
-      "0.465\n",
-      "0.466\n",
-      "0.467\n",
-      "0.468\n",
-      "0.46900000000000003\n",
-      "0.47000000000000003\n",
-      "0.47100000000000003\n",
-      "0.47200000000000003\n",
-      "0.47300000000000003\n",
-      "0.47400000000000003\n",
-      "0.47500000000000003\n",
-      "0.47600000000000003\n",
-      "0.47700000000000004\n",
-      "0.47800000000000004\n",
-      "0.47900000000000004\n",
-      "0.48\n",
-      "0.481\n",
-      "0.482\n",
-      "0.483\n",
-      "0.484\n",
-      "0.485\n",
-      "0.486\n",
-      "0.487\n",
-      "0.488\n",
-      "0.489\n",
-      "0.49\n",
-      "0.491\n",
-      "0.492\n",
-      "0.493\n",
-      "0.494\n",
-      "0.495\n",
-      "0.496\n",
-      "0.497\n",
-      "0.498\n",
-      "0.499\n",
-      "0.5\n",
-      "0.501\n",
-      "0.502\n",
-      "0.503\n",
-      "0.504\n",
-      "0.505\n",
-      "0.506\n",
-      "0.507\n",
-      "0.508\n",
-      "0.509\n",
-      "0.51\n",
-      "0.511\n",
-      "0.512\n",
-      "0.513\n",
-      "0.514\n",
-      "0.515\n",
-      "0.516\n",
-      "0.517\n",
-      "0.518\n",
-      "0.519\n",
-      "0.52\n",
-      "0.521\n",
-      "0.522\n",
-      "0.523\n",
-      "0.524\n",
-      "0.525\n",
-      "0.526\n",
-      "0.527\n",
-      "0.528\n",
-      "0.529\n",
-      "0.53\n",
-      "0.531\n",
-      "0.532\n",
-      "0.533\n",
-      "0.534\n",
-      "0.535\n",
-      "0.536\n",
-      "0.537\n",
-      "0.538\n",
-      "0.539\n",
-      "0.54\n",
-      "0.541\n",
-      "0.542\n",
-      "0.543\n",
-      "0.544\n",
-      "0.545\n",
-      "0.546\n",
-      "0.547\n",
-      "0.548\n",
-      "0.549\n",
-      "0.55\n",
-      "0.551\n",
-      "0.552\n",
-      "0.553\n",
-      "0.554\n",
-      "0.555\n",
-      "0.556\n",
-      "0.557\n",
-      "0.558\n",
-      "0.559\n",
-      "0.56\n",
-      "0.561\n",
-      "0.562\n",
-      "0.5630000000000001\n",
-      "0.5640000000000001\n",
-      "0.5650000000000001\n",
-      "0.5660000000000001\n",
-      "0.5670000000000001\n",
-      "0.5680000000000001\n",
-      "0.5690000000000001\n",
-      "0.5700000000000001\n",
-      "0.5710000000000001\n",
-      "0.5720000000000001\n",
-      "0.5730000000000001\n",
-      "0.5740000000000001\n",
-      "0.5750000000000001\n",
-      "0.5760000000000001\n",
-      "0.577\n"
-     ]
-    },
-    {
-     "ename": "Exception",
-     "evalue": "Couldn't find a solution with inverse kinematics",
+     "ename": "IndexError",
+     "evalue": "list index out of range",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_9820/3026477840.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    138\u001b[0m     \u001b[0minv_kinematics_theta_all\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minverse_kinematics\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq_ref\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mq_ref\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    139\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minv_kinematics_theta_all\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 140\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Couldn't find a solution with inverse kinematics\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    141\u001b[0m     \u001b[0;31m# choose an inverse kinematics path\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    142\u001b[0m     \u001b[0minv_kinematics_theta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minv_kinematics_theta_all\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minv_kinematics_theta_all\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mException\u001b[0m: Couldn't find a solution with inverse kinematics"
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_9295/1555085818.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    138\u001b[0m         \u001b[0minv_kinematics_theta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minv_kinematics_theta_all\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    139\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 140\u001b[0;31m         \u001b[0minv_kinematics_theta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minv_kinematics_theta_all\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    141\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    142\u001b[0m     \u001b[0;31m#print(\"theta from inverse kinematics: \\n\",inv_kinematics_theta)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
@@ -988,8 +415,8 @@
     "num_steps = int(run_time/dt)\n",
     "\n",
     "# the PD gains\n",
-    "P = np.array([1.5, 1.5, 1.5])*10\n",
-    "D = np.array([0.01, 0.01, 0.01])*30\n",
+    "P = np.array([1.5, 1.5, 1.5])*20\n",
+    "D = np.array([0.01, 0.01, 0.01])*10\n",
     "\n",
     "## we allocate a few vectors to collect data while we do the simulation\n",
     "# we will store the sensor values (angular position and velocities)\n",
@@ -1064,27 +491,27 @@
     "#         print(\"init_pos: \", init_pos)    \n",
     "#         print(\"des_pos: \", des_pos)    \n",
     "#         print(\"ball_num: \", ball_number)\n",
-    "    \n",
-    "    if time_to_goal - t <= 0:\n",
-    "        init_pos = ball_positions[ball_number]\n",
-    "        ball_number = (ball_number + 1)\n",
-    "        t = 0\n",
+    "\n",
+    "# uncomment for question 1\n",
+    "#     if time_to_goal - t <= 0:\n",
+    "#         init_pos = ball_positions[ball_number]\n",
+    "#         ball_number = (ball_number + 1)\n",
+    "#         t = 0\n",
+    "\n",
     "#         print(\"init_pos: \", init_pos)    \n",
     "#         print(\"des_pos: \", des_pos)    \n",
     "#         print(\"ball_num: \", ball_number)\n",
     "        \n",
-    "    des_pos = ball_positions[ball_number] #this is qdes\n",
+    "#     des_pos = ball_positions[ball_number] #this is qdes\n",
+    "    # CIRCLE\n",
+    "    des_pos = np.array([0.03+0.05*np.cos(np.pi*time[i]), -0.2+0.05*np.sin(np.pi*time[i]), 0.])\n",
     "    \n",
-    "    # change this according to your needs so the robot moves according to your goals\n",
-    "    #q_ref, dq_ref = compute_trajectory(init_pos, des_pos, 0, time_to_goal, t)\n",
-    "        \n",
-    "    # for circle\n",
-    "    \n",
-    "    q_ref = np.array([0.03+0.05*np.cos(np.pi*time[i]), -0.2+0.05*np.sin(np.pi*time[i]), 0.])\n",
-    "    dq_ref = np.array([-0.05*np.sin(np.pi*time[i]), 0.05*np.cos(np.pi*time[i]), 0.])\n",
-    "#     print(q_ref / np.pi)\n",
-    "    print(time[i])\n",
-    "    \n",
+    "#     change this according to your needs so the robot moves according to your goals\n",
+    "#     q_ref, dq_ref = compute_trajectory(init_pos, des_pos, 0, time_to_goal, t)\n",
+    "    # for CIRCLE\n",
+    "#     q_ref, dq_ref = compute_trajectory(init_pos, des_pos, 0, dt, 0)\n",
+    "    q_ref = init_pos + np.array([0.03+0.05*np.cos(np.pi*time[i]), -0.2+0.05*np.sin(np.pi*time[i]), 0.]) * run_time\n",
+    "    dq_ref = np.array([-0.05*np.sin(np.pi*time[i]), 0.05*np.cos(np.pi*time[i]), 0.]) * run_time\n",
     "    #q_des is desired position of end effector\n",
     "    #dq_des is desired velocity of end effector\n",
     "    v_O = (dq_ref + P * (q_ref - pose[:3,3]))\n",
@@ -1093,26 +520,23 @@
     "\n",
     "    #dtheta_des will be desired joint velocity\n",
     "    if (abs(q[2]) < 0.05):\n",
-    "        invJacobian = np.linalg.inv(jacobian[3:] + eps*np.eye(3))\n",
+    "        dtheta_des = np.linalg.inv(jacobian[3:] + eps*np.eye(3)) @ v_O\n",
     "    else: \n",
-    "        invJacobian = np.linalg.inv(jacobian[3:])\n",
-    "        \n",
-    "    dtheta_des = invJacobian @ v_O\n",
+    "        dtheta_des = np.linalg.inv(jacobian[3:]) @ v_O\n",
     "    \n",
     "    t += dt\n",
     "    \n",
-    "    \n",
     "    inv_kinematics_theta_all = inverse_kinematics(q_ref[0],q_ref[1])\n",
-    "    if len(inv_kinematics_theta_all) == 0:\n",
-    "        raise Exception(\"Couldn't find a solution with inverse kinematics\")\n",
-    "    # choose an inverse kinematics path\n",
-    "    inv_kinematics_theta = inv_kinematics_theta_all[len(inv_kinematics_theta_all)-1]\n",
+    "#     # we save the desired positions/velocities for later plotting \n",
+    "    if (len(inv_kinematics_theta_all) == 2):\n",
+    "        inv_kinematics_theta = inv_kinematics_theta_all[1]\n",
+    "    else:\n",
+    "        inv_kinematics_theta = inv_kinematics_theta_all[0]\n",
     "    \n",
+    "    #print(\"theta from inverse kinematics: \\n\",inv_kinematics_theta)\n",
+    "#     desired_positions[i,:] = q_ref\n",
     "    desired_positions[i,:] = np.array([inv_kinematics_theta[0,0],inv_kinematics_theta[1,0],inv_kinematics_theta[2,0]])\n",
-    "    \n",
-    "    desired_velocities[i,:] = invJacobian @ dq_ref\n",
-    "    \n",
-    "    desired_finger_position[i,:] = q_ref\n",
+    "    desired_velocities[i,:] = dq_ref\n",
     "\n",
     "    ##PD controller\n",
     "    d_error = dtheta_des - dq # the velocity error for all the joints\n",
